modules/gdscript/tests/scripts/analyzer/errors/property_inline_get_type_error.gd
var _prop: int

# Inline getter returns int instead of String.
var prop: String:
	get:
		return _prop

func test():
	pass
